<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="152.5dp"
        android:src="@drawable/logo_oficina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/text_faixa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A39C9C"
        android:padding="6dp"
        android:text="Peças,serviços                                                      Valor"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />


    <EditText
        android:id="@+id/edit_text1"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/digite_aqui1"
        android:paddingStart="10dp"
        android:paddingTop="20dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_faixa"
        tools:ignore="Autofill,DuplicateSpeakableTextCheck,RtlSymmetry,TextFields,TextContrastCheck" />

    <EditText
        android:id="@+id/edit_text2"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:hint="@string/digite_aqui2"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text1"
        tools:ignore="Autofill,RtlSymmetry,TextFields,TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/edit_text3"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:hint="@string/digite_aqui3"
        android:importantForAutofill="no"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text2"
        tools:ignore="RtlSymmetry,TextFields,TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/edit_text4"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:hint="@string/digite_aqui4"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text3"
        tools:ignore="Autofill,RtlSymmetry,TextFields,TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/edit_text5"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:hint="@string/digite_aqui5"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text4"
        tools:ignore="Autofill,RtlSymmetry,TextContrastCheck,TextFields,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edit_text6"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:hint="@string/digite_aqui6"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text5"
        tools:ignore="Autofill,RtlSymmetry,TextContrastCheck,TextFields,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edit_text7"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:hint="@string/digite_aqui7"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text6"
        tools:ignore="Autofill,RtlSymmetry,TextFields,TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/edit_text8"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:hint="@string/digite_aqui8"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text7"
        tools:ignore="Autofill,RtlSymmetry,TextContrastCheck,TextFields,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edit_text9"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:hint="@string/digite_aqui9"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text8"
        tools:ignore="Autofill,RtlSymmetry,TextContrastCheck,TextFields,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edit_text10"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:hint="@string/digite_aqui"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text9"
        tools:ignore="Autofill,RtlSymmetry,TextFields,TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/edit_valor1"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:paddingStart="8dp"
        android:paddingTop="28dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_text1"
        app:layout_constraintTop_toBottomOf="@id/text_faixa"
        tools:ignore="Autofill,RtlSymmetry,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/edit_valor2"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:paddingStart="8dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_text1"
        app:layout_constraintTop_toBottomOf="@id/edit_valor1"
        tools:ignore="Autofill,RtlSymmetry,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edit_valor3"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:paddingStart="8dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_text2"
        app:layout_constraintTop_toBottomOf="@id/edit_valor2"
        tools:ignore="Autofill,RtlSymmetry,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edit_valor4"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:paddingStart="8dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_text3"
        app:layout_constraintTop_toBottomOf="@id/edit_valor3"
        tools:ignore="Autofill,RtlSymmetry,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edit_valor5"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:paddingStart="8dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_text4"
        app:layout_constraintTop_toBottomOf="@id/edit_valor4"
        tools:ignore="Autofill,RtlSymmetry,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edit_valor6"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:paddingStart="8dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_text5"
        app:layout_constraintTop_toBottomOf="@id/edit_valor5"
        tools:ignore="Autofill,RtlSymmetry,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edit_valor7"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:paddingStart="8dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_text6"
        app:layout_constraintTop_toBottomOf="@id/edit_valor6"
        tools:ignore="Autofill,RtlSymmetry,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edit_valor8"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:paddingStart="8dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_text7"
        app:layout_constraintTop_toBottomOf="@id/edit_valor7"
        tools:ignore="Autofill,RtlSymmetry,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edit_valor9"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:paddingStart="8dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_text8"
        app:layout_constraintTop_toBottomOf="@id/edit_valor8"
        tools:ignore="Autofill,RtlSymmetry,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edit_valor10"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:paddingStart="8dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_text9"
        app:layout_constraintTop_toBottomOf="@id/edit_valor9"
        tools:ignore="Autofill,RtlSymmetry,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/edit_valorTotal"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:inputType="numberDecimal"
        android:paddingTop="4dp"
        android:text="@string/r"
        android:textColor="#DC1919"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/edit_text10"
        app:layout_constraintTop_toBottomOf="@id/edit_valor10"
        tools:ignore="TextViewEdits,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintBounds" />

    <View

        android:layout_width="70dp"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:background="@color/black"
        android:paddingStart="8dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_valor10"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/total_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#A39C9C"
        android:text="@string/valortotal"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/edit_valorTotal"
        app:layout_constraintTop_toBottomOf="@id/edit_text10"
        app:layout_goneMarginEnd="100dp" />

    <Button
        android:id="@+id/botaoprint"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="18dp"
        android:backgroundTint="#00FFFFFF"
        android:padding="50dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/edit_valorTotal"
        app:layout_constraintTop_toBottomOf="@id/total_button"


        />


</androidx.constraintlayout.widget.ConstraintLayout>